# cross-encoder-2

./: .gitignore  README.md  pyproject.toml
cross_encoder_2/: cross-encoder.ipynb  playground.ipynb
