[tool.poetry]
name = "cross-encoder-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cross_encoder_2"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.4"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
torch = "^2.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
