[tool.poetry]
name = "cross-encoder-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cross_encoder_2"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.4"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
torch = "^2.0.0"
black = "^23.3.0"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
torchvision = "^0.15.1"
tensorboard = "^2.12.1"
torch-tb-profiler = "^0.4.1"
nltk = "^3.8.1"
tqdm = "^4.65.0"
datasets = "^2.11.0"
wandb = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
